deploy/kubernetes/overlays/dev/vd-execution.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edgeai-api
spec:
  template:
    spec:
      containers:
        - name: api
